# plasma-wayland-protocols

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  PlasmaWaylandProtocolsConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt
src/: CMakeLists.txt
src/protocols/: appmenu.xml  blur-unstable-v1.xml  blur.xml  contrast.xml  fake-input.xml  fullscreen-shell.xml  gpu-management.xml  kde-blur-v1.xml  kde-external-brightness-v1.xml  kde-lockscreen-overlay-v1.xml  kde-lockscreenallowed-v1.xml  kde-output-device-v2.xml  kde-output-management-v2.xml  kde-overlay-shell-v1.xml  kde-screen-edge-v2.xml  kde-screencast-v2.xml  kde-virtual-desktop-v2.xml  org-kde-plasma-virtual-desktop.xml  output-management.xml  outputdevice.xml  plasma-shell.xml  plasma-window-management.xml  screencast.xml  shadow.xml  zkde-screencast-unstable-v1.xml
